# rust-web

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/http/: ai.rs  auth.rs  math.rs  mod.rs
