[package]
name = "rust-web"
version = "0.1.0"
edition = "2021"

[dependencies]
# Base
chrono = "0.4.24"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
# Axum
axum = { version = "0.6.18", features = ["headers"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }
#axum-client-ip = "0.4.1"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0"
tower = "0.4.13"
tower-http = { version = "0.4", features = ["cors", "fs"] }
reqwest = { version = "0.11", features = ["json"] }
tera = "1.18.1"
# Database
sqlx = { version = "0.6.3", features = ["postgres", "ipnetwork", "uuid", "bigdecimal", "runtime-tokio-rustls"] }
futures = "0.3.28"


[[bin]]
name = "app"
path = "src/main.rs"

